# TdJNI

./: .gitmodules  build.gradle.kts  settings.gradle.kts
core/: .gitignore  build.gradle.kts
core/src/main/java/me/omico/telegram/tdlib/: Jni.java
core/src/main/kotlin/: Main.kt
jni/: .gitignore  CMakeLists.txt  README.md  conanfile.txt  td_jni.cpp  td_jni.h
